embed marker data

--- a/GisLibrary/GisLibrary.csproj
+++ b/GisLibrary/GisLibrary.csproj
@@ -20,6 +20,11 @@
 
   <ItemGroup>
     <None Remove="coordinates.bin" />
+    <None Remove="coordinates.gz" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="coordinates.gz" />
   </ItemGroup>
 
 </Project>
