--- a/UnitTestProject/App.config
+++ b/UnitTestProject/App.config
@@ -1,14 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.IO.Compression"
-                          publicKeyToken="B77A5C561934E089"
-                          culture="neutral" />
-        <bindingRedirect oldVersion="4.1.1.0"
-                         newVersion="4.1.2.0"/>
+        <assemblyIdentity name="System.IO.Compression" publicKeyToken="B77A5C561934E089" culture="neutral"/>
+        <bindingRedirect oldVersion="4.1.1.0" newVersion="4.1.2.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/></startup></configuration>
