--- a/UnitTestProject/SurveyGridLibrary.Test.csproj
+++ b/UnitTestProject/SurveyGridLibrary.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F34F291E-530D-4896-B44F-7DF77A63D100}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTestProject1</RootNamespace>
-    <AssemblyName>UnitTestProject1</AssemblyName>
+    <RootNamespace>SurveyGridLibrary.Test</RootNamespace>
+    <AssemblyName>SurveyGridLibrary.Test</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -65,9 +65,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GisLibrary\GisLibrary.csproj">
+    <ProjectReference Include="..\GisLibrary\SurveyGridLibrary.csproj">
       <Project>{22441b4a-2531-4ed0-add0-5946a92dd591}</Project>
-      <Name>GisLibrary</Name>
+      <Name>SurveyGridLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
